@@ -34,6 +34,7 @@ namespace CXX
           exceptions (!ops.value<CLI::no_exceptions> ()),
           stl (!ops.value<CLI::no_stl> ()),
           poly_code (ops.value<CLI::generate_polymorphic> ()),
+          poly_runtime (poly_code || ops.value<CLI::runtime_polymorphic> ()),
           reset (!ops.value<CLI::suppress_reset> ()),
           detach (ops.value<CLI::generate_detach> ()),
           mixin (ops.value<CLI::reuse_style_mixin> ()),
