@@ -580,6 +580,7 @@ namespace CXX
           String root_parser (unclash (name, "root_parser"));
           String root_map;
           String error, reset;
+          String poly_name;
           String parser_map, parser_map_entries;
 
           InstanceSet set;
@@ -604,6 +605,12 @@ namespace CXX
           {
             reset = unclash (name, "reset");
             set.insert (reset);
+          }
+
+          if (poly_runtime)
+          {
+            poly_name = unclash (name, "polymorphic");
+            set.insert (poly_name);
           }
 
           if (poly_code)
@@ -712,6 +719,17 @@ namespace CXX
             os << "}";
           }
 
+          // polymorphic ()
+          //
+          if (poly_runtime)
+          {
+            os << "static bool" << endl
+               << poly_name << " ()"
+               << "{"
+               << "return " << (tid_map.size () > 0 ? "true" : "false") << ";"
+               << "}";
+          }
+
           os << "public:" << endl;
 
           for (TypeInstanceMap::Iterator i (map.begin ()), end (map.end ());
@@ -755,6 +773,7 @@ namespace CXX
           String root_name (unclash (name, "root_name"));
           String root_namespace (unclash (name, "root_namespace"));
           String error, reset;
+          String poly_name;
           String parser_map, parser_map_entries;
 
           InstanceSet set;
@@ -782,6 +801,12 @@ namespace CXX
           {
             reset = unclash (name, "reset");
             set.insert (reset);
+          }
+
+          if (poly_runtime)
+          {
+            poly_name = unclash (name, "polymorphic");
+            set.insert (poly_name);
           }
 
           if (poly_code)
@@ -900,6 +925,17 @@ namespace CXX
               os << "this->" << parser_map << ".reset ();";
 
             os << "}";
+          }
+
+          // polymorphic ()
+          //
+          if (poly_runtime)
+          {
+            os << "static bool" << endl
+               << poly_name << " ()"
+               << "{"
+               << "return " << (tid_map.size () > 0 ? "true" : "false") << ";"
+               << "}";
           }
 
           os << "public:" << endl;
